Always show scrollbar in feed to avoid content move

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -411,6 +411,10 @@ body {
     scrollbar-color: var(--scrollbar-color);
 }
 
+#feed {
+    overflow-y: scroll;
+}
+
 #feed-empty, #loading {
     display: flex;
     justify-content: center;
